test/implicitDup20.slq

def foo(x:ğ”¹){
	y:=dup(x);
	z:=y;
	t:=y;
	k:=H(x);
	r:=y; /// error
	return (r,k,t,z);
}

